# semantic-scholar-mcp-rs

./: .clippy.toml  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  MCP_TOOL_TEST_REPORT.md  README.md  VIBE_KANBAN.md  deny.toml  docker-compose.yml  rustfmt.toml
.gemini/: ralph-loop.local.md
.github/workflows/: ci.yml
crates/semantic-scholar-mcp/: Cargo.toml
crates/semantic-scholar-mcp/src/: config.rs  error.rs  lib.rs  main.rs
crates/semantic-scholar-mcp/src/client/: middleware.rs  mod.rs
crates/semantic-scholar-mcp/src/formatters/: json.rs  markdown.rs
crates/semantic-scholar-mcp/src/models/: enums.rs  inputs.rs  mod.rs  paper.rs
crates/semantic-scholar-mcp/src/server/: mod.rs  session.rs  stdio.rs  transport.rs
crates/semantic-scholar-mcp/src/server/oauth/: handlers.rs  login.rs  mod.rs  pkce.rs  store.rs  types.rs
crates/semantic-scholar-mcp/src/tools/: advanced.rs  bibliometrics.rs  discovery.rs  enrichment.rs  export.rs  mod.rs  networks.rs  semantic.rs  systematic.rs  trends.rs
crates/semantic-scholar-mcp/tests/: advanced_tests.rs  bibliometrics_tests.rs  config_client_tests.rs  csv_export_repro.rs  discovery_tests.rs  edge_case_tests.rs  enrichment_tests.rs  error_handling_tests.rs  error_tests.rs  formatter_tests.rs  highly_cited_repro.rs  input_validation_tests.rs  integration_tests.rs  mcp_protocol_tests.rs  model_edge_cases_tests.rs  model_tests.rs  networks_tests.rs  oauth_integration_tests.rs  oauth_tests.rs  proptest_inputs.rs  proptest_paper.rs  rate_limit_repro.rs  semantic_tests.rs  systematic_tests.rs  tool_integration_tests.rs  tool_mock_tests.rs  tool_mock_tests_2.rs  tool_tests.rs  trends_tests.rs
crates/semantic-scholar-mcp/tests/fixtures/: paper_attention.json
crates/sentinel-fuzz/: Cargo.toml
crates/sentinel-fuzz/fuzz/: Cargo.toml
crates/sentinel-fuzz/fuzz/fuzz_targets/: fuzz_input_parse.rs  fuzz_json_object.rs  fuzz_paper_parse.rs
crates/sentinel-fuzz/src/: lib.rs
docs/plans/: 2025-01-14-sentinel-design.md  2025-01-14-sentinel-phase1-implementation.md
src/: config.rs  error.rs  main.rs
src/client/: mod.rs
src/formatters/: json.rs  markdown.rs  mod.rs
src/models/: author.rs  inputs.rs  mod.rs  paper.rs
src/server/: mod.rs  session.rs  transport.rs
src/tools/: advanced.rs  bibliometrics.rs  discovery.rs  enrichment.rs  export.rs  mod.rs  networks.rs  semantic.rs  systematic.rs  trends.rs
tests/: advanced_tests.rs  bibliometrics_tests.rs  config_client_tests.rs  discovery_tests.rs  enrichment_tests.rs  error_handling_tests.rs  error_tests.rs  input_validation_tests.rs  model_edge_cases_tests.rs  model_tests.rs  semantic_tests.rs  tool_tests.rs
tests/fixtures/: paper_bert.json
