[package]
name = "semantic-scholar-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
description = "MCP server for Semantic Scholar API - systematic reviews and bibliometrics"
repository = "https://github.com/luka/semantic-scholar-mcp-rs"
keywords = ["mcp", "semantic-scholar", "academic", "research", "citations"]
categories = ["command-line-utilities", "science"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client with HTTP/2 support
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "http2",
    "rustls-tls",
    "gzip",
] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Middleware
tower = { version = "0.5", features = ["limit", "retry", "timeout"] }
governor = "0.8"

# Caching
moka = { version = "0.12", features = ["future"] }

# MCP Protocol
# rmcp = { version = "0.1", features = ["server", "transport-io"] }  # Temporarily disabled

# Async utilities
futures = "0.3"
async-stream = "0.3"
pin-project-lite = "0.2"

# Async trait
async-trait = "0.1"

# Utilities
md-5 = "0.10"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
insta = { version = "1", features = ["json"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = []
integration = []  # Real API tests

[[bin]]
name = "semantic-scholar-mcp"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
