[workspace]
resolver = "2"
members = ["crates/semantic-scholar-mcp"]
exclude = ["crates/sentinel-fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/luka/semantic-scholar-mcp-rs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# HTTP client with HTTP/2 support
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "http2",
    "rustls",
    "gzip",
] }
reqwest-middleware = { version = "0.5", features = ["query"] }
reqwest-retry = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2.0"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Middleware
tower = { version = "0.5", features = ["limit", "retry", "timeout"] }
governor = "0.8"

# Caching
moka = { version = "0.12", features = ["future"] }

# HTTP Server
axum = { version = "0.8.8", features = ["json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async utilities
futures = "0.3"
async-stream = "0.3"
pin-project-lite = "0.2"
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"

# Utilities
md-5 = "0.10"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
base64 = "0.22"

# Dev dependencies
tokio-test = "0.4"
wiremock = "0.6"
insta = { version = "1", features = ["json"] }
criterion = { version = "0.8", features = ["async_tokio"] }
proptest = "1.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Lint groups with lower priority so individual allows take precedence
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Explicit allows (justified)
missing_errors_doc = "allow"          # MCP tools have uniform error handling
module_name_repetitions = "allow"     # SemanticScholarClient is intentionally clear
multiple_crate_versions = "allow"     # Transitive deps, not controllable
missing_const_for_fn = "allow"        # const fn adds little value for async code
items_after_statements = "allow"      # Local structs in async fns are idiomatic
too_many_lines = "allow"              # Complex tools need full context
cast_precision_loss = "allow"         # i32->f64 casts are fine for citation counts
cast_possible_truncation = "allow"    # usize->i32 won't truncate paper counts
cast_sign_loss = "allow"              # Array indices are always positive
doc_markdown = "allow"                # Code in docs doesn't need backticks everywhere
format_push_string = "allow"          # format! + push_str is readable, performance is not critical
collapsible_if = "allow"              # Explicit if nesting can be clearer
cast_lossless = "allow"               # i32 to f64 infallible cast is verbose for no benefit
unused_self = "allow"                 # Method signatures kept for future extensibility
missing_fields_in_debug = "allow"     # Custom Debug omits internal fields intentionally
missing_panics_doc = "allow"          # Panics are assert-style, not runtime
doc_link_with_quotes = "allow"        # Doc quotes are for readability
significant_drop_tightening = "allow" # Lock scope is clear in context
match_same_arms = "allow"             # Explicit arms improve readability
manual_let_else = "allow"             # Match arms are clear in error handling
or_fun_call = "allow"                 # Macro calls are compile-time
map_unwrap_or = "allow"               # map().unwrap_or() is readable
uninlined_format_args = "allow"       # Named args don't improve all format strings
redundant_closure_for_method_calls = "allow"  # Closures can be clearer for chained calls

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
