[package]
name = "sentinel-fuzz"
version = "0.1.0"
edition = "2024"
publish = false
description = "Fuzzing targets for semantic-scholar-mcp"

[dependencies]
semantic-scholar-mcp = { path = "../semantic-scholar-mcp" }
serde_json = "1"

# Note: This crate requires nightly Rust and cargo-fuzz
# Install: rustup install nightly && cargo +nightly install cargo-fuzz
# Run: cd crates/sentinel-fuzz && cargo +nightly fuzz run fuzz_paper_parse
