[package]
name = "sentinel-fuzz-targets"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
semantic-scholar-mcp = { path = "../../semantic-scholar-mcp" }

[[bin]]
name = "fuzz_paper_parse"
path = "fuzz_targets/fuzz_paper_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_input_parse"
path = "fuzz_targets/fuzz_input_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_json_object"
path = "fuzz_targets/fuzz_json_object.rs"
test = false
doc = false
bench = false
